--- a/Translations/LicensingApp.g.xlf
+++ b/Translations/LicensingApp.g.xlf
@@ -8,6 +8,36 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table EVT Customer License - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Table 1871836828 - NamedType 2129233030" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Customer Email is not specified</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table EVT Customer License - NamedType CustomerEmailIsEmptyErr</note>
+        </trans-unit>
+        <trans-unit id="Table 1871836828 - NamedType 2469818627" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Customer Name is empty</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table EVT Customer License - NamedType CustomerNameIsEmptyErr</note>
+        </trans-unit>
+        <trans-unit id="Table 1871836828 - NamedType 2802532079" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Expiration Date is not specified</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table EVT Customer License - NamedType ExpirationDateIsEmptyErr</note>
+        </trans-unit>
+        <trans-unit id="Table 1871836828 - NamedType 1603261984" size-unit="char" translate="yes" xml:space="preserve">
+          <source>License file has already been generated!</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table EVT Customer License - NamedType LicenseAlreadyGenErr</note>
+        </trans-unit>
+        <trans-unit id="Table 1871836828 - NamedType 3874157106" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Starting Date is not specified</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table EVT Customer License - NamedType StartingDateIsEmptyErr</note>
+        </trans-unit>
+        <trans-unit id="Table 1871836828 - NamedType 1608436589" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Tenant Id is not specified</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table EVT Customer License - NamedType TenantIdIsEmptyErr</note>
+        </trans-unit>
         <trans-unit id="Table 1871836828 - Method 29770049 - NamedType 1885249418" size-unit="char" translate="yes" xml:space="preserve">
           <source>License.xml</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -268,21 +298,6 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page EVT Customer License Card - NamedType ChooseOptionLbl</note>
         </trans-unit>
-        <trans-unit id="Page 3975096360 - NamedType 2129233030" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Customer Email is not specified</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Page EVT Customer License Card - NamedType CustomerEmailIsEmptyErr</note>
-        </trans-unit>
-        <trans-unit id="Page 3975096360 - NamedType 2469818627" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Customer Name is empty</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Page EVT Customer License Card - NamedType CustomerNameIsEmptyErr</note>
-        </trans-unit>
-        <trans-unit id="Page 3975096360 - NamedType 2802532079" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Expiration Date is not specified</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Page EVT Customer License Card - NamedType ExpirationDateIsEmptyErr</note>
-        </trans-unit>
         <trans-unit id="Page 3975096360 - NamedType 1099871011" size-unit="char" translate="yes" xml:space="preserve">
           <source>You've Downloaded a License File</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -307,16 +322,6 @@
           <source>There is no License generated</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page EVT Customer License Card - NamedType NoLicenseErr</note>
-        </trans-unit>
-        <trans-unit id="Page 3975096360 - NamedType 3874157106" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Starting Date is not specified</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Page EVT Customer License Card - NamedType StartingDateIsEmptyErr</note>
-        </trans-unit>
-        <trans-unit id="Page 3975096360 - NamedType 1608436589" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Tenant Id is not specified</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Page EVT Customer License Card - NamedType TenantIdIsEmptyErr</note>
         </trans-unit>
         <trans-unit id="Page 3975096360 - Control 1171137197 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
           <source>Specifies the value of the Customer Name field.</source>
